# monarch

./: .dockerignore  .gitignore  404.html  Dockerfile  README.md  demo.hdf5  index.html  pyproject.toml  requirements.txt  setup.py  single_beats.ipynb
examples/: demo.hdf5  fg_estimate_test.ipynb  growth.ipynb  preterm_test.ipynb  single_beats.ipynb
examples/input_files/: canine_vo.json  human.json  human_simple.json  pediatric.json  wtageinf.xls
input_files/: canine.json  canine_vo.json  human.json  human_lbbb.json  oomen2022.json
monarch-docs/: Dockerfile  mkdocs.yml  requirements.txt
monarch-docs/docs/: growth.md  index.md  monarch_starter_interactive.ipynb  single_beats.md  style.css
monarch-docs/docs/static/: style.css
monarch-docs/site/: search.html
monarch-docs/site/growth/: index.html
monarch-docs/site/input_files/: oomen2022.json
monarch-docs/site/search/: search_index.json
monarch-docs/site/single_beats/: index.html
src/monarch/: __init__.py  converged_solution.json  egg.py  growth.py  heart.py  import_export.py  metamophoses.py  metamorphoses.py  solvers.py  utils.py  visualize.py  vitals.py
