[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "monarch"
version = "0.0.1"
authors = [
  { name="Pim Oomen", email="pim.oomen@uci.edu" },
  { name="Clara Jones", email="claraej@uci.edu" },
  { name="Felix Plappert", email="felix.plappert@bme.lth.se" },
]
description = "Open-source modeling environment to simulate cardiac physiology and remodeling"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.26.4",
    "numba>=0.60.0",
    "pandas>=2.2.2",
    "h5py>=3.11.0",
    "scipy>=1.7.3",
    "seaborn>=0.13.2",
    "matplotlib>=3.8.4",
    "jupyterlab"
]

[project.urls]
Homepage = "https://github.com/beatlab/monarch"
Issues = "https://github.com/beatlab/monarch/issues"